[package]
name = "inscript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
ord-rs = { version = "0.2.2", git = "https://github.com/bitfinity-network/ord-rs", features = ["rand"] }
argh = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
bitcoin = { version = "0.31", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
hex = "0.4"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "trust-dns",
] }
clap = { version = "*", features = ["env"] }

bitcoincore-rpc = "0.19.0"
bitcoincore-rpc-json = "0.19.0"